// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ColorPicker interactive 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(255, 255, 255)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(102, 102, 102)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(0, 0, 0)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(170, 187, 204)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(221, 238, 255)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(171, 205, 239)",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "rgba(255, 255, 255, 0)",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="#hex color"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/ColorPicker six colors 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(255, 255, 255)",
              }
            }
          >
            <svg
              className="euiIcon euiIcon--medium selected-color"
              focusable="false"
              height="16"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(102, 102, 102)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(0, 0, 0)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(170, 187, 204)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(221, 238, 255)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(171, 205, 239)",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "rgb(255, 255, 255)",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="#hex color"
            type="text"
            value="#fff"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/ColorPicker six colors, value missing 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(255, 255, 255)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(102, 102, 102)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(0, 0, 0)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(170, 187, 204)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(221, 238, 255)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(171, 205, 239)",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "rgb(161, 178, 195)",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="#hex color"
            type="text"
            value="#a1b2c3"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/ColorPicker three colors 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(255, 255, 255)",
              }
            }
          >
            <svg
              className="euiIcon euiIcon--medium selected-color"
              focusable="false"
              height="16"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(102, 102, 102)",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "rgb(0, 0, 0)",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "rgb(255, 255, 255)",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="#hex color"
            type="text"
            value="#fff"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
